[gd_scene load_steps=86 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/keha.png" type="Texture" id=2]
[ext_resource path="res://Monster.gd" type="Script" id=3]
[ext_resource path="res://assets/ydinsheet.png" type="Texture" id=4]
[ext_resource path="res://World.gd" type="Script" id=5]
[ext_resource path="res://assets/flag.png" type="Texture" id=6]
[ext_resource path="res://assets/invydinsheet.png" type="Texture" id=7]
[ext_resource path="res://assets/invkeha.png" type="Texture" id=8]
[ext_resource path="res://assets/backgrounds/bubblesback.png" type="Texture" id=9]
[ext_resource path="res://assets/backgrounds/bubbles.png" type="Texture" id=10]
[ext_resource path="res://BackgroundParticles.gd" type="Script" id=11]
[ext_resource path="res://assets/backgrounds/LargeParticles2.png" type="Texture" id=12]
[ext_resource path="res://assets/backgrounds/Particles.png" type="Texture" id=13]
[ext_resource path="res://Background.gd" type="Script" id=14]
[ext_resource path="res://assets/kipina.png" type="Texture" id=15]
[ext_resource path="res://assets/xplosion/Blast7.png" type="Texture" id=16]
[ext_resource path="res://assets/xplosion/Blast8.png" type="Texture" id=17]
[ext_resource path="res://assets/xplosion/Blast1.png" type="Texture" id=18]
[ext_resource path="res://assets/xplosion/Blast4.png" type="Texture" id=19]
[ext_resource path="res://assets/xplosion/Blast3.png" type="Texture" id=20]
[ext_resource path="res://assets/xplosion/Blast5.png" type="Texture" id=21]
[ext_resource path="res://assets/xplosion/Blast2.png" type="Texture" id=22]
[ext_resource path="res://assets/xplosion/Blast6.png" type="Texture" id=23]
[ext_resource path="res://assets/sounds/Lepton.wav" type="AudioStream" id=24]
[ext_resource path="res://Time.gd" type="Script" id=25]
[ext_resource path="res://assets/sounds/Meson.wav" type="AudioStream" id=26]
[ext_resource path="res://assets/sounds/Quark.wav" type="AudioStream" id=27]
[ext_resource path="res://assets/sounds/Baryon.wav" type="AudioStream" id=28]
[ext_resource path="res://assets/sounds/PositiveVsNegative_V2.mp3" type="AudioStream" id=29]
[ext_resource path="res://FlagOrGoal.gd" type="Script" id=30]
[ext_resource path="res://assets/portal.png" type="Texture" id=31]
[ext_resource path="res://BandaidBorders.tscn" type="PackedScene" id=32]

[sub_resource type="Animation" id=73]
resource_name = "Curculate"
length = 7.0
loop = true
step = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Balls02:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, 0, 0.0185566, 0, -0.0185566, 40.6347, -1, -0.0138397, 1, 0.0138397, -40.5813, -1, -0.106453, 1, 0.106453, 0, 0, 0.597261, 0, -0.597261 ),
"times": PoolRealArray( 0, 2, 5, 7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Balls02:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 5, 7 )
}

[sub_resource type="Animation" id=74]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Balls02:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Balls02:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="CircleShape2D" id=76]
radius = 50.0

[sub_resource type="CircleShape2D" id=77]
radius = 20.0

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "default",
"speed": 23.0
} ]

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=72]
animations = [ {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "default",
"speed": 25.0
} ]

[sub_resource type="CircleShape2D" id=78]
radius = 20.0

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 192, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=51]
animations = [ {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=29]

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 476.5, 10 )

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 11.125, 267.5 )

[sub_resource type="SpriteFrames" id=75]
animations = [ {
"frames": [ ExtResource( 17 ), ExtResource( 16 ), ExtResource( 23 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 23 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": false,
"name": "default",
"speed": 60.0
} ]

[node name="World" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Node2D" parent="."]
position = Vector2( 467, 256 )
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
POSITIVE_MODULATE_COLOR = Color( 0.301961, 0.380392, 0.729412, 1 )
NEGATIVE_MODULATE_COLOR = Color( 0.541176, 0.337255, 0.211765, 1 )
MODULATE_PARTICLE_LAYER = 0.01

[node name="Balls01" type="Sprite" parent="Background"]
texture = ExtResource( 9 )

[node name="Particles1" type="Sprite" parent="Background"]
texture = ExtResource( 13 )
script = ExtResource( 11 )
ATTENUATION = 0.95

[node name="Balls02" type="Sprite" parent="Background"]
texture = ExtResource( 10 )

[node name="Particles2" type="Sprite" parent="Background"]
texture = ExtResource( 12 )
script = ExtResource( 11 )
ATTENUATION = 0.8

[node name="Balls02anim" type="AnimationPlayer" parent="Background"]
autoplay = "Curculate"
anims/Curculate = SubResource( 73 )
anims/RESET = SubResource( 74 )

[node name="PlayerBarrierCollisionParticles" type="CPUParticles2D" parent="."]
position = Vector2( 277, 110 )
emitting = false
amount = 40
lifetime = 2.0
one_shot = true
speed_scale = 10.0
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
texture = ExtResource( 15 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
direction = Vector2( 0, 0 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.5
damping = 23.56
angle_random = 1.0
scale_amount = 1.25
scale_amount_random = 0.5

[node name="MonsterBarrierCollisionParticles" type="CPUParticles2D" parent="."]
position = Vector2( 277, 110 )
emitting = false
amount = 40
lifetime = 2.0
one_shot = true
speed_scale = 10.0
explosiveness = 1.0
randomness = 1.0
lifetime_randomness = 1.0
texture = ExtResource( 15 )
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
direction = Vector2( 0, 0 )
spread = 20.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.5
damping = 23.56
angle_random = 1.0
scale_amount = 1.25
scale_amount_random = 0.5

[node name="Goal" type="Area2D" parent="."]
script = ExtResource( 30 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}
ROTATION_SPEED = 0.2
FLICKER_STR = 0.05

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
rotation = 0.785398
shape = SubResource( 76 )

[node name="Sprite" type="Sprite" parent="Goal"]
texture = ExtResource( 31 )

[node name="Sprite2" type="Sprite" parent="Goal"]
texture = ExtResource( 31 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 127, 79 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 77 )

[node name="Core" type="AnimatedSprite" parent="Player"]
frames = SubResource( 25 )
frame = 1
playing = true

[node name="Field" type="AnimatedSprite" parent="Player"]
frames = SubResource( 72 )
frame = 7
playing = true

[node name="Bounce" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 24 )
volume_db = -2.0

[node name="Monster" type="KinematicBody2D" parent="."]
position = Vector2( 764, 412 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Monster"]
shape = SubResource( 78 )

[node name="Core" type="AnimatedSprite" parent="Monster"]
frames = SubResource( 24 )
frame = 1
playing = true

[node name="Field" type="AnimatedSprite" parent="Monster"]
frames = SubResource( 51 )
frame = 6
playing = true

[node name="PlayerSeenTimer" type="Timer" parent="Monster"]
one_shot = true

[node name="Bounce" type="AudioStreamPlayer" parent="Monster"]
stream = ExtResource( 24 )
volume_db = -5.0

[node name="Flag" type="Area2D" parent="."]
position = Vector2( 873, 466 )
script = ExtResource( 30 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flag"]
shape = SubResource( 29 )

[node name="Sprite" type="Sprite" parent="Flag"]
texture = ExtResource( 6 )

[node name="Sound" type="AudioStreamPlayer" parent="Flag"]
stream = ExtResource( 28 )

[node name="LevelBorders" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Top" type="CollisionShape2D" parent="LevelBorders"]
position = Vector2( 466.5, 0 )
shape = SubResource( 27 )

[node name="Bottom" type="CollisionShape2D" parent="LevelBorders"]
position = Vector2( 465, 512 )
shape = SubResource( 27 )

[node name="Right" type="CollisionShape2D" parent="LevelBorders"]
position = Vector2( 929, 253 )
shape = SubResource( 28 )

[node name="Left" type="CollisionShape2D" parent="LevelBorders"]
position = Vector2( 2, 259 )
shape = SubResource( 28 )

[node name="BandaidBorders" parent="LevelBorders" instance=ExtResource( 32 )]

[node name="The10sTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="HideButton" type="CheckButton" parent="."]
visible = false
margin_left = 11.0
margin_top = 13.0
margin_right = 87.0
margin_bottom = 53.0
pressed = true
text = "Hiding"

[node name="Annihilation" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
frames = SubResource( 75 )

[node name="Sound" type="AudioStreamPlayer" parent="Annihilation"]
stream = ExtResource( 26 )
pitch_scale = 0.75

[node name="TimeLeftDisplay" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 502.0
margin_right = 924.0
margin_bottom = 512.0
script = ExtResource( 25 )

[node name="Sound" type="AudioStreamPlayer" parent="TimeLeftDisplay"]
stream = ExtResource( 27 )

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 29 )
autoplay = true

[connection signal="body_entered" from="Goal" to="." method="_on_check_for_win"]
[connection signal="timeout" from="Monster/PlayerSeenTimer" to="Monster" method="_on_lost_player_timeout"]
[connection signal="body_entered" from="Flag" to="." method="_on_flag_touch"]
[connection signal="timeout" from="The10sTimer" to="." method="_on_10sTimer_timeout"]
[connection signal="timeout" from="FlickerTimer" to="." method="_on_FlickerTimer_timeout"]
[connection signal="toggled" from="HideButton" to="." method="_on_HideButton_toggled"]
[connection signal="animation_finished" from="Annihilation" to="." method="_on_annihilation_finished"]
